<resources>
    <string name="app_name">My AppUsing Kotlin</string>
    <string name="button_to_cycle">1. Ciclo de evenetos</string>
    <string name="button_to_click">2. Click para eventos</string>
    <string name="button_to_android_extensions">3. Kotlin Android extensions</string>
    <string name="button_to_picasso">4. Ir a picasso</string>
    <string name="button_to_list_view">5. Ir a List View</string>
    <string name="button_to_intents">6. Ir a intents</string>
    <string name="button_to_permissions">7. Ir a permissions</string>
    <string name="button_to_shared_preferences">8. Ir a Shared Preferences</string>
    <string name="button_to_Extensions_functions">9. Irt a Extensions functions</string>
    <string name="button_ClicXML">Clickeado por XML</string>
    <string name="button_Click_Line">Clickeado en linea</string>
    <string name="button_Multi_1">Botón Múltiple 1</string>
    <string name="button_Multi_2">Botón Múltiple 2</string>
    <string name="button_Multi_3">Botón Múltiple 3</string>
    <string name="button_kat_id">BUTTON FINDVIEWBYID</string>
    <string name="button_kat_kat">BUTTON BY KAT</string>
    <string name="button_intent_extras">Intent With Extras</string>
    <string name="button_intent_flags">Intent With Flags</string>
    <string name="button_intent_object">Intent With Object</string>
    <string name="button_back">Go Back</string>
    <string name="button_photo">Take a Photo</string>
    <string name="button_photo_without_permissions">Take a Photo without permission</string>
    <string name="preferences_age_hint">Type age here</string>
    <string name="preferences_button_save">Save</string>
    <string name="preferences_name_hint">Type name here</string>
    <string name="extensions_toast">Toast</string>
    <string name="extensions_snack_bar">Snack Bar</string>
    <string name="extensions_load_by_url">Load By Url</string>
    <string name="extensions_go_to_Activity">Go To Activity</string>



</resources>
